@@ -120,6 +120,8 @@ compileJava {
 }
 
 test {
+    jvmArgs '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED'
+    
     testLogging {
         exceptionFormat "full"
         events "skipped", "passed", "failed", "started"
